dnl Process this file with autoconf to produce a configure script.
AC_INIT(dds2curses.c)
AM_INIT_AUTOMAKE(dds-tools,0.1)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(strstr strlwr)

AC_OUTPUT(Makefile)
